@@ -18,6 +18,8 @@ Version 1.7.6
 - CHG: Issue #224: use crashrpt. (Stefan)
 - BUG: Issue #225: Error when creating a
        branch/tag from log dialog. (Stefan)
+- BUG: Issue #226: context commands for
+       externals can fail. (Stefan)
 
 Version 1.7.5
 - BUG: Issue #184: Refresh in log dialog only refreshes
